[gd_scene load_steps=5 format=3 uid="uid://dw3idat6ite0m"]

[ext_resource type="Texture2D" uid="uid://dap7i3bphd2hu" path="res://KCards/images/bg_buttons_picture/unlock_button.png" id="1_ig3gl"]
[ext_resource type="Script" path="res://KCards/scenes/menu/buttons_layer_2.gd" id="1_kubfj"]
[ext_resource type="Texture2D" uid="uid://dkqp1aemjln4s" path="res://KCards/images/bg_buttons_picture/lock_button.png" id="2_ygy0r"]
[ext_resource type="Texture2D" uid="uid://kam5g042pbtj" path="res://KCards/images/bg_buttons_picture/k-temn.png" id="3_tceld"]

[node name="ButtonsLayer2" type="CanvasLayer"]
layer = -8
script = ExtResource("1_kubfj")

[node name="FirstButton" type="Button" parent="."]
offset_left = 233.0
offset_top = -322.0
offset_right = 458.0
offset_bottom = -252.0
theme_override_font_sizes/font_size = 35
text = "Играть
"

[node name="CampaignButton" type="TextureButton" parent="."]
offset_left = 67.0
offset_top = 97.0
offset_right = 277.0
offset_bottom = 167.0
disabled = true
texture_normal = ExtResource("1_ig3gl")
texture_disabled = ExtResource("2_ygy0r")

[node name="Label" type="Label" parent="CampaignButton"]
layout_mode = 0
offset_left = 35.0
offset_top = 13.0
offset_right = 178.0
offset_bottom = 55.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "Кампания"
horizontal_alignment = 1

[node name="BattlesButton" type="TextureButton" parent="."]
offset_left = 67.0
offset_top = 189.0
offset_right = 277.0
offset_bottom = 259.0
texture_normal = ExtResource("1_ig3gl")
texture_pressed = ExtResource("3_tceld")
texture_disabled = ExtResource("2_ygy0r")

[node name="Label" type="Label" parent="BattlesButton"]
layout_mode = 0
offset_left = 37.0
offset_top = 13.0
offset_right = 180.0
offset_bottom = 55.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 27
text = "Сражения
"
horizontal_alignment = 1

[node name="ExitButton" type="TextureButton" parent="."]
offset_left = 66.0
offset_top = 277.0
offset_right = 276.0
offset_bottom = 347.0
texture_normal = ExtResource("1_ig3gl")
texture_pressed = ExtResource("3_tceld")
texture_disabled = ExtResource("2_ygy0r")

[node name="Label" type="Label" parent="ExitButton"]
layout_mode = 0
offset_left = 40.0
offset_top = 13.0
offset_right = 182.0
offset_bottom = 55.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "Выход"
horizontal_alignment = 1

[connection signal="pressed" from="BattlesButton" to="." method="_on_battles_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
